--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,7 @@ header {
 }
 
 .image {
-  background: url(..//public/cainespiwak.png);
+  background: url(/cainespiwak.png);
   background-size: cover;
   background-position: center center;
   width: 200px;
